--- a/CSS/style.css
+++ b/CSS/style.css
@@ -8,7 +8,59 @@
     text-decoration: none;
     vertical-align: baseline;
     background: transparent;
+    color: black;
 }
+
+/* Header-bar */
+
+.header-bar {
+    margin: 0.5%;
+    width: 99%;
+    display: flex;
+    flex-direction: row;
+    height: fit-content;
+    background-color:rgb(0, 0, 128);
+    box-shadow: 0px 0px 70px rgb(36, 36, 36);
+}
+
+.header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.logo-help {
+    float: left;
+    height: fit-content;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.logo-link {
+    width: auto;
+}
+
+.img-logo {
+    margin: 0.5rem;
+    height: 8rem;
+    width: 8rem;
+}
+
+.header-title {
+    margin-left: 5%;
+    width: fit-content;
+    font-size: 5rem;
+    font-family: 'Lato'; /* help */
+}
+
+.nav {
+    float: right;
+    justify-content: flex-start;
+}
+
+/* Footer-bar */
+
 .footer-container {
     font-family: 'Lora';
     height: fit-content;
@@ -56,7 +108,8 @@
     color: #000;
     text-decoration: none;
 }
-
+  position: sticky;
+  top: 0;
 */
 /* Responsive part */
 
