--- a/CSS/style.css
+++ b/CSS/style.css
@@ -26,6 +26,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    width: 60%;
 }
 
 .logo-help {
@@ -72,7 +73,7 @@
     padding: 1rem 0.5rem;
     margin: 3.5rem 0;
     font-size: xx-large;
-    border: 0.2rem solid black;
+    border: 0.2rem solid black;    
     border-right: 0.1rem;
 }
 
