--- a/CSS/style.css
+++ b/CSS/style.css
@@ -14,6 +14,7 @@
 /* Header-bar */
 
 .header-bar {
+    background-color: white;
     margin: 0.5%;
     width: 98.5%;
     padding-right: 0.5%;
@@ -101,12 +102,15 @@
 .main-container {
     background-color: white;
     margin: 0.5%;
-    width: 99%;
+    width: 98%;
+    padding: 0.5%;
+    box-shadow: 0px 0px 70px rgb(36, 36, 36);
 }
 
 /* Footer-bar */
 
 .footer-container {
+    background-color: white;
     font-family: 'Lora';
     height: fit-content;
     width: fit-content;
@@ -118,7 +122,9 @@
     line-height: 170%;
     height: auto;
     margin-top: 0.625rem;
-    box-shadow: 0px 0px 70px rgb(36, 36, 36);
+    -moz-box-shadow: 0px 3px 8px rgb(100, 100, 100);
+    -webkit-box-shadow: 0px 3px 8px rgb(100, 100, 100);
+    box-shadow: 0px 3px 8px rgb(100, 100, 100);
     justify-content: space-around;
 }
 
