--- a/CSS/style.css
+++ b/CSS/style.css
@@ -11,6 +11,10 @@
     color: black;
 }
 
+.body {
+    background-color: rgb(124, 124, 124);
+}
+
 /* Header-bar */
 
 .header-bar {
@@ -21,7 +25,6 @@
     display: flex;
     flex-direction: row;
     height: fit-content;
-    box-shadow: 0px 0px 70px rgb(36, 36, 36);
 }
 
 .header {
@@ -104,11 +107,10 @@
     margin: 0.5%;
     width: 98%;
     padding: 0.5%;
-    box-shadow: 0px 0px 70px rgb(36, 36, 36);
 }
 
-.p{
-  margin: 5px 0px 5px 5px
+.p {
+    margin: 5px 0px 5px 5px
 }
 
 /* Footer-bar */
@@ -126,9 +128,6 @@
     line-height: 170%;
     height: auto;
     margin-top: 0.625rem;
-    -moz-box-shadow: 0px 3px 8px rgb(100, 100, 100);
-    -webkit-box-shadow: 0px 3px 8px rgb(100, 100, 100);
-    box-shadow: 0px 3px 8px rgb(100, 100, 100);
     justify-content: space-around;
 }
 
