--- a/CSS/style.css
+++ b/CSS/style.css
@@ -11,15 +11,17 @@
     color: black;
 }
 
-.body {
-    background-color: rgb(124, 124, 124);
+.background {
+    background-color: rgb(0, 0, 0);
+    height: 100%;
 }
 
 /* Header-bar */
 
 .header-bar {
-    background-color: white;
+    background-color: rgb(213, 213, 213);
     margin: 0.5%;
+    margin-top: 0rem;
     width: 98.5%;
     padding-right: 0.5%;
     display: flex;
@@ -103,7 +105,7 @@
 /* Main */
 
 .main-container {
-    background-color: white;
+    background-color: rgb(213, 213, 213);
     margin: 0.5%;
     width: 98%;
     padding: 0.5%;
@@ -113,7 +115,7 @@
 /* Footer-bar */
 
 .footer-container {
-    background-color: white;
+    background-color: rgb(213, 213, 213);
     font-family: 'Lora';
     height: fit-content;
     width: fit-content;
